test/parse/expr/bad-loop-sig-multi.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    loop (result i32 i32)
      i32.const 1
      i32.const 2
    end
    drop
    drop))
(;; STDERR ;;;
out/test/parse/expr/bad-loop-sig-multi.txt:5:5: error: multiple loop signature result types not currently supported.
    loop (result i32 i32)
    ^^^^
;;; STDERR ;;)
